feat: integrate firebase authentication
